# bearparser

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  _abstract_byte_buffer_8cpp.html  _abstract_byte_buffer_8cpp_ac3cd053e69301cf6e8ca7e6b0ca382f2_cgraph.map  _abstract_byte_buffer_8cpp_ac3cd053e69301cf6e8ca7e6b0ca382f2_cgraph.md5  _abstract_byte_buffer_8cpp_source.html  _abstract_byte_buffer_8h.html  _abstract_byte_buffer_8h_source.html  _bound_imp_dir_wrapper_8cpp.html  _bound_imp_dir_wrapper_8cpp_source.html  _bound_imp_dir_wrapper_8h.html  _bound_imp_dir_wrapper_8h_source.html  _byte_buffer_8cpp.html  _byte_buffer_8cpp_source.html  _byte_buffer_8h.html  _byte_buffer_8h_source.html  _clr_dir_wrapper_8cpp.html  _clr_dir_wrapper_8cpp_source.html  _clr_dir_wrapper_8h.html  _clr_dir_wrapper_8h_source.html  _common_ordinals_lookup_8h.html  _common_ordinals_lookup_8h_source.html  _common_ordinals_map_8h.html  _common_ordinals_map_8h_source.html  _common_ordinals_oleaut32_8h.html  _common_ordinals_oleaut32_8h_source.html  _common_ordinals_w_s2__32_8h.html  _common_ordinals_w_s2__32_8h_source.html  _custom_exception_8h.html  _custom_exception_8h_source.html  _d_o_s_exe_8cpp.html  _d_o_s_exe_8cpp_source.html  _d_o_s_exe_8h.html  _d_o_s_exe_8h_source.html  _data_dir_entry_wrapper_8cpp.html  (+2292 more)
.github/workflows/: cppcheck.yml  main.yml
commander/: CMakeLists.txt  Commander.cpp  Commander.h  ExeCommander.cpp  ExeCommander.h  PECommander.cpp  PECommander.h  main.cpp
parser/: AbstractByteBuffer.cpp  AbstractByteBuffer.h  AbstractFileBuffer.cpp  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  CustomException.h  ExeElementWrapper.cpp  ExeElementWrapper.h  ExeFactory.cpp  ExeNodeWrapper.cpp  ExeNodeWrapper.h  Executable.cpp  Executable.h  FileBuffer.cpp  FileBuffer.h  Formatter.cpp  Formatter.h  MappedExe.cpp  MappedExe.h  Util.cpp  Util.h  WrappedValue.cpp  bearparser.h
parser/include/: bearparser.h
parser/include/bearparser/: AbstractByteBuffer.h  AbstractFileBuffer.h  ByteBuffer.h  ExeElementWrapper.h  ExeFactory.h  ExeNodeWrapper.h  Executable.h  FileBuffer.h  Formatter.h  MappedExe.h  Util.h  WatchedLocker.h  WrappedValue.h  bearparser.h  core.h  pe.h  pefile.h
parser/include/bearparser/pe/: BoundImpDirWrapper.h  ClrDirWrapper.h  CommonOrdinalsLookup.h  DOSExe.h  DataDirEntryWrapper.h  DataDirWrapper.h  DebugDirWrapper.h  ExceptionDirWrapper.h  ExportDirWrapper.h  FileHdrWrapper.h  ImportBaseDirWrapper.h  ImportDirWrapper.h  LdConfigDirWrapper.h  PECore.h  PEFile.h  RelocDirWrapper.h  ResourceDirWrapper.h  ResourceLeafWrapper.h  RichHdrWrapper.h  SectHdrsWrapper.h  SecurityDirWrapper.h  TlsDirWrapper.h  pe_formats.h  pe_undoc.h
parser/include/bearparser/pe/lookup/: CommonOrdinalsMap.h  CommonOrdinalsOleaut32.h  CommonOrdinalsWS2_32.h
parser/include/bearparser/pe/rsrc/: ResourceStringsWrapper.h  ResourceVersionWrapper.h  pe_rsrc.h
parser/include/bearparser/win_hdrs/: poppack.h  pshpack1.h  pshpack2.h  pshpack8.h  win_types.h
parser/pe/: BoundImpDirWrapper.cpp  BoundImpDirWrapper.h  ClrDirWrapper.cpp  DOSExe.cpp  DOSExe.h  DataDirEntryWrapper.cpp  DataDirEntryWrapper.h  DataDirWrapper.cpp  DataDirWrapper.h  DebugDirWrapper.cpp  DebugDirWrapper.h  DelayImpDirWrapper.cpp  DelayImpDirWrapper.h  DosHdrWrapper.cpp  DosHdrWrapper.h  ExceptionDirWrapper.cpp  ExceptionDirWrapper.h  ExportDirWrapper.cpp  ExportDirWrapper.h  FileHdrWrapper.cpp  FileHdrWrapper.h  ImportBaseDirWrapper.cpp  ImportBaseDirWrapper.h  ImportDirWrapper.cpp  ImportDirWrapper.h  LdConfigDirWrapper.cpp  LdConfigDirWrapper.h  OptHdrWrapper.cpp  OptHdrWrapper.h  PECore.cpp  PECore.h  PEFile.cpp  PEFile.h  PENodeWrapper.cpp  PENodeWrapper.h  RelocDirWrapper.cpp  RelocDirWrapper.h  ResourceDirWrapper.cpp  ResourceDirWrapper.h  ResourceLeafWrapper.h  (+10 more)
parser/pe/rsrc/: ResourceContentFactory.cpp  ResourceContentFactory.h  ResourceContentWrapper.cpp  ResourceContentWrapper.h  ResourceStringsWrapper.cpp  ResourceStringsWrapper.h  ResourceVersionWrapper.cpp  ResourceVersionWrapper.h  ResourcesAlbum.cpp  ResourcesAlbum.h  pe_rsrc.h
parser/win_hdrs/: pshpack4.h  win_headers.h  win_types.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+110 more)
